style: correction z-index filtres responsive #139

--- a/web/themes/custom/openig/scss/_responsive.scss
+++ b/web/themes/custom/openig/scss/_responsive.scss
@@ -590,7 +590,7 @@
         left: -100%;
         transition: 1.5s;
         background-color: $OPenIG-color_white;
-        z-index: 3 !important;
+        z-index: 4 !important;
         padding: 10px;
         width: 100vw !important;
         height: calc(100% - 80px) !important;
